# PopplerShot

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  vcpkg.json
.github/workflows/: build-and-release.yml
cmake/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
include/: batch_processor.h  file_utils.h  pdf_converter.h  progress_bar.h
src/: batch_processor.cpp  file_utils.cpp  main.cpp  pdf_converter.cpp  progress_bar.cpp
